--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.26.1",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.0.0",
     "webpack-dev-server": "^2.0.0"
